weird text wrapping issues has been fixed

--- a/wp-content/themes/delivering-happiness/assets/sass/global/_shop.scss
+++ b/wp-content/themes/delivering-happiness/assets/sass/global/_shop.scss
@@ -41,10 +41,13 @@
             position: relative;
         }
         .button {
-            position: absolute;
+            /*position: absolute;
             top: 143px;
             right: 98px;
-            padding: 18px 31px;
+            padding: 18px 31px;*/
+            float: right;
+            margin: 7px 20px 20px 75px;
+            padding: 10px 31px;
         }
         .content {
             h2 {
